# k_matcher

./: README.md  pyproject.toml
.github/workflows/: backend.yml
app/: pyproject.toml
app/plhdr_project_name/: config.py  main.py
backend/: .gitignore  .pre-commit-config.yaml  alembic.ini  lint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_07_28_2119-f897abaaf4a1_init.py  2025_08_07_0006-685a7a1017d5_init.py
backend/cfg/: cfg.yaml
backend/k_matcher/: config.py  database.py  main.py
backend/k_matcher/domain/: answer.py  enums.py  models.py  question_result.py
backend/k_matcher/models/: helpers.py  models.py
backend/tests/integration/: conftest.py  test_post_result.py  test_question_categories.py  test_questions.py  test_results.py
backend/tests/unit/: test_question_result.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api_types.tsx  common_types.tsx  index.css  main.tsx
frontend/src/app/: store.tsx
frontend/src/components/: NotFound.tsx  Question.tsx  QuestionButton.tsx  Spinner.tsx  SubmissionResult.tsx  SubmissionResultError.tsx  SubmissionResultSuccess.tsx
frontend/src/features/navigation/: Navigation.tsx
frontend/src/features/questions/: Navigation.tsx  Question.tsx  QuestionButton.tsx  QuestionList.tsx  Questionnaire.tsx  SubmissionResult.tsx  SubmissionResultError.tsx  SubmissionResultSuccess.tsx  SubmitButton.tsx  questionsSlice.tsx
k_matcher/: config.py  main.py  questions.csv
k_matcher/domain/: answer.py  question_result.py
tests/unit/: test_question_result.py
(+1 files in other folders)
