[tool.poetry]
name = "plhdr-project-name"
version = "0.1.0"
description = ""
authors = ["Sleptsov Denis Sergeevich <hurrdurrrderp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.9.0"
bandit = "^1.7.8"
pytest = "^8.1.1"
pre-commit = "^3.7.0"

[tool.bandit]
exclude_dirs = [".venv"]

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
